apps/prod/code-server/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
  hostnames:
    - code.myrobertson.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: code-server
          port: 8080
